--- a/manifest-registration.yml
+++ b/manifest-registration.yml
@@ -4,7 +4,6 @@ applications:
   host: registration-pal-at
   memory: 1G
   instances: 1
-  env:
-    REGISTRATION_SERVER_ENDPOINT: http://registration-pal-at.apps.longs.pal.pivotal.io
   services:
   - tracker-registration-database
+  - tracker-service-registry
